# BatteryComputing

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Full_Solution.m  Full_Solution.py  Full_Solution_emi.py  README.md  conanfile.txt  full_matlab_emi.m  pyproject.toml
Jad_MATLAB/: E0_changes.fig  alpha_changes.fig
Jad_MATLAB/1D/: Dirichlet.m  Explicit.m  Full_Solution.m  Newmann.m  Newmann_KHABSA.m
Jad_MATLAB/2D/: Second_Order_Newuman_Bigmatrix.m  Second_Order_Newuman_forloop.m
Jad_MATLAB/Graphs2/: K0_change.fig
Matlab/: K0_changes.fig  w_changes.fig
Matlab/1D/: Dirichlet.m  Explicit.m  Full_Solution.m  Newmann.m
Matlab/2D/: Second_Order_Newuman_Bigmatrix.m  Second_Order_Newuman_forloop.m
Matlab/Graphs2/: E0_Changes.fig  alpha_change.fig  w_change.fig
SpectralSolver/: Interface.cpp  Interface.h  Solver.cpp  Solver.h  main.cpp  plots.cpp
report/: .gitignore  customisations.tex  report.tex  sources.bib
results/: ac-current.csv  ac-voltammetry-10.csv  ac-voltammetry-15.csv  ac-voltammetry-25.csv  ac-voltammetry-30.csv  ac-voltammetry-35.csv  ac-voltammetry-5.csv  chronoamperometry-0.1.csv  chronoamperometry-0.5.csv  chronoamperometry-1.csv  chronoamperometry-10.csv  chronoamperometry-15.csv  chronoamperometry-2.csv  chronoamperometry-25.csv  chronoamperometry-3.csv  chronoamperometry-30.csv  chronoamperometry-35.csv  chronoamperometry-4.csv  chronoamperometry-5.csv  voltammetry-current-0--4.csv  voltammetry-current-0--5.csv  voltammetry-current-0-0.csv  voltammetry-current-0-4.csv  voltammetry-current-0-5.csv  voltammetry-current-0.1--4.csv  voltammetry-current-0.1--5.csv  voltammetry-current-0.1-0.csv  voltammetry-current-0.1-4.csv  voltammetry-current-0.1-5.csv  voltammetry-current-0.1.csv  voltammetry-current-0.15.csv  voltammetry-current-0.2--4.csv  voltammetry-current-0.2--5.csv  voltammetry-current-0.2-0.csv  voltammetry-current-0.2-4.csv  voltammetry-current-0.2-5.csv  voltammetry-current-0.2.csv  voltammetry-current-0.3--4.csv  voltammetry-current-0.3--5.csv  voltammetry-current-0.3-0.csv  (+4 more)
(+30 files in other folders)
