[tool.poetry]
name = "batterycomputing"
version = "0.1.0"
description = "MMSC Case Study in Computing :)"
authors = ["Chloe", "Emilie", "Jad", "Peter"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git", "**/__pycache__"]
